<resources>
    <string name="app_name">Movynov</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="navbar_popular">Popular</string>
    <string name="navbar_watchlist">Watchlist</string>
    <string name="navbar_forum">Forum</string>
    <string name="navbar_settings">Settings</string>
    <string name="navbar_login">Login</string>
    <string name="navbar_logout">Log out</string>

    <string name="addtowatchlist">Add to watchlist</string>
    <string name="addedtowatchlist">Added to watchlist!</string>

    <string name="removefromwatchlist">Remove from watchlist</string>
    <string name="removedfromwatchlist">Removed from watchlist!</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="tetes_d_affiche">Têtes d\'affiche :</string>
    <string name="watchproviders_availabaible_on">Disponible sur :</string>
    <string name="forum_posts_related_to_movie">Posts du forum liés au film</string>
    <string name="cast_item_playing_as">Dans le rôle de :</string>
    <string name="recommandations_label">Recommandations :</string>
    <string name="trailers_label">Bandes-annonce disponibles:</string>
    <string name="navbar_search">Search</string>
    <string name="hint_spoiler">Pensez à marquer vos spoilers entre des balises || : ||Spoiler||</string>
    <string name="submit_comment_button_text">Envoyer</string>
    <string name="no_movies_found_by_search_error">Pas de films trouvés pour cette recherche</string>
</resources>