<?xml version="1.0" encoding="utf-8"?>
<menu
    android:id="@+id/nav_menu"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view"
    >
    <group
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_popular"
            android:title="@string/navbar_popular"/>
        <item
            android:id="@+id/nav_watchlist"
            android:title="@string/navbar_watchlist"/>
    </group>

    <group
        >
            <item
                android:id="@+id/nav_login"
                android:title="@string/navbar_login"/>
            <item
                android:id="@+id/nav_username"
                android:title="USERNAME_PLACEHOLDER"/>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/navbar_logout"/>
    </group>
</menu>