<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <ProgressBar
        android:id="@+id/progress_bar_details"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginTop="250dp"
        android:indeterminate="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".activities.MovieDetailActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/details_layout_without_progressbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/details_banner_layout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/details_movie_backdrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"

                        />

                    <TextView
                        android:id="@+id/details_movie_vote_average"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:shadowColor="@color/black"
                        android:shadowDx="2"
                        android:shadowRadius="5"
                        android:text="7.8🌟"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/details_user_score_label"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:shadowColor="@color/black"
                        android:shadowDx="2"
                        android:shadowRadius="5"
                        android:text=" user score"
                        android:textColor="@color/white"
                        android:textSize="20dp"
                        app:layout_constraintStart_toEndOf="@id/details_movie_vote_average"
                        app:layout_constraintTop_toTopOf="parent" />


                    <TextView
                        android:id="@+id/details_movie_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:letterSpacing="0.2"
                        android:maxWidth="350dp"
                        android:maxLines="2"
                        android:shadowColor="@color/black"
                        android:shadowDx="2"
                        android:shadowRadius="8"
                        android:text="Title: the Movieeee"
                        android:textColor="@color/white"
                        android:textSize="30dp"
                        android:textStyle="italic"
                        app:layout_constraintBottom_toBottomOf="@id/details_banner_layout"
                        app:layout_constraintStart_toStartOf="parent" />

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/details_movie_poster_card"
                        android:layout_width="120dp"
                        android:layout_height="180dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="20dp"
                        app:cardCornerRadius="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:strokeColor="@color/black"
                        app:strokeWidth="2dp">

                        <ImageView
                            android:id="@+id/details_movie_poster"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent" />

                    </com.google.android.material.card.MaterialCardView>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/details_movie_release_date_and_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="2020-02-02 | 2h 30m"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_banner_layout" />

                <TextView
                    android:id="@+id/details_movie_genres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxWidth="350dp"
                    android:maxLines="1"
                    android:text="Action, Adventure, Comédie"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_movie_release_date_and_duration" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/details_movies_button_forum"
                    android:layout_width="260dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/forum_posts_related_to_movie"
                    android:textSize="12dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_genres" />

                <TextView
                    android:id="@+id/details_movie_platforms_text"
                    style="@style/Theme.Movynov"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/watchproviders_availabaible_on"
                    android:textSize="15dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movies_button_forum" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_movie_platforms_recyclerview"
                    android:layout_width="300dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_platforms_text" />

                <TextView
                    android:id="@+id/details_movie_tagline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:letterSpacing="0.15"
                    android:maxWidth="300dp"
                    android:text="tagline"
                    android:textColor="?attr/colorSecondary"

                    android:textSize="20dp"
                    android:textStyle="italic|bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_movie_platforms_recyclerview" />

                <TextView
                    android:id="@+id/details_movie_overview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:maxWidth="400dp"
                    android:text="overview"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/details_movie_tagline"

                    />

                <TextView
                    android:id="@+id/details_movie_cast_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/tetes_d_affiche"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintTop_toBottomOf="@+id/details_movie_trailers_recyclerview"

                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_movie_cast_recyclerview"
                    android:layout_width="400dp"
                    android:layout_height="210dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_cast_label" />

                <TextView
                    android:id="@+id/details_movie_recommandations_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_cast_recyclerview"
                    android:layout_marginTop="20dp"
                    android:text="@string/recommandations_label"

                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_movie_recommandations_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_recommandations_label" />

                <TextView
                    android:id="@+id/details_movie_trailers_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/trailers_label"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_overview" />
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/details_movie_trailers_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/details_movie_trailers_label" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>